@@ -2,6 +2,7 @@
 v6.1.5-git
 ----------
 
+[mms] Don't display empty containers in dynamic folder list (Request #11425).
 
 
 ------
